# agg

./: .gitignore  agg.cabal
examples/: Fold.hs  Prec.hs  Stdin.hs
src/Number/: Aggregate.hs
src/Number/Aggregate/: Get.hs  Start.hs  Type.hs  Update.hs
